src/test/ui/feature-gate-profiler-runtime.stderr
error[E0658]: the `#[profiler_runtime]` attribute is used to identify the `profiler_builtins` crate which contains the profiler runtime and will never be stable
  --> $DIR/feature-gate-profiler-runtime.rs:11:1
   |
LL | #![profiler_runtime] //~ ERROR the `#[profiler_runtime]` attribute is
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(profiler_runtime)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
